# dicom-checker

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  manifest.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
docs/: release_notes.md
fw_gear_dicom_checker/: CT-override.yaml  __init__.py  default.yaml  finish.py  main.py  parser.py
tests/: test_finish.py  test_main.py  test_parser.py
