[tool.poetry]
name = "fw-gear-dicom-checker"
version = "0.1.0"
description = "This gear opens a DICOM file, checks some of the DICOM tags, and then set a Flywheel tag on the input file based on whether the checks pass or fail. The gear checks are configurable."
authors = ["Flywheel <support@flywheel.io>"]
readme = "README.md"
license = "MIT"
keywords = [
    "Flywheel",
    "Gears"
]
repository = "https://gitlab.com/flywheel-io/scientific-solutions/gears/dicom-checker"
classifiers = [
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = "^3.11"
fw-classification = "^0"
fw-gear-file-metadata-importer = "^1"
jinja2 = "^3"

[tool.poetry.dev-dependencies]
pytest = "^8"
pytest-cov = "^5"
pytest-mock = "^3"

[tool.ruff]
lint.ignore-init-module-imports = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
